--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ProgramaYa!</title>
+    <title>Consultoría Plannergy</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -17,8 +17,8 @@
     </header>
 
     <section id="hero">
-        <h1>Aprendé a Programar <br>con los Mejores</h1>
-        <button>APLICÁ YA!</button>
+        <h1>Un servicio estrategico <br>a tu medida</h1>
+        <button>Solicitalo ya!</button>
     </section>
 
     <section id="somos-proya">
@@ -59,9 +59,9 @@
         <div class="container">
             <ul>
                 <li>✔️ 100% online</li>
-                <li>✔️ Flexibilidad de horarios</li>
+                <li>✔️ Flexibilidad de atención</li>
                 <li>✔️ Soporte 1:1</li>
-                <li>✔️ Asistencia financiera</li>
+                <li>✔️ Asistencia virtual</li>
             </ul>
         </div>
     </section>
@@ -73,7 +73,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; ProgramaYa 2021</p>
+            <p>&copy; Consultoría Plannegy 2022</p>
         </div>
     </footer>
 </body>
