--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div class="container">
             <p class="logo">ProgramaYa!</p>
             <nav>
-                <a href="#somos-proya">Quienes Somos</a>
-                <a href="#nuestros-programas">Nuestros Programas</a>
-                <a href="#caracteristicas">Características</a>
+                <a href="#somos-Plannergy">Quienes Somos</a>
+                <a href="#nuestros-servicios">Nuestros Servicios</a>
+                <a href="#Planes">Planes</a>
             </nav>
         </div>
     </header>
@@ -21,7 +21,7 @@
         <button>Solicitalo ya!</button>
     </section>
 
-    <section id="somos-proya">
+    <section id="somos-Plannergys">
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
@@ -32,10 +32,10 @@
         </div>
     </section>
 
-    <section id="nuestros-programas">
+    <section id="nuestros-planes">
         <div class="container">
             <h2>Nuestros Programas</h2>
-            <div class="programas">
+            <div class="planes">
                 <div class="carta">
                     <h3>Programador Front-end</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
