--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">ProgramaYa!</p>
+            <p class="logo">Consultoría Plannergy</p>
             <nav>
-                <a href="#somos-Plannergy">Quienes Somos</a>
+                <a href="#somos-Plannergy">Somos Plannergys</a>
                 <a href="#nuestros-servicios">Nuestros Servicios</a>
                 <a href="#Planes">Planes</a>
             </nav>
@@ -17,8 +17,8 @@
     </header>
 
     <section id="hero">
-        <h1>Un servicio estrategico <br>a tu medida</h1>
-        <button>Solicitalo ya!</button>
+        <h1>Un servicio estratégico <br>a tu medida</h1>
+        <button>consultoriaplannegy@gmail.com</button>
     </section>
 
     <section id="somos-Plannergys">
@@ -26,15 +26,15 @@
             <div class="img-container"></div>
             <div class="texto">
 
-                <h2>Somos <span class="color-acento">ProgramaYa!</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis odio nemo minus vel!</p>
+                <h2>Somos <span class="color-acento">Plannergys</span></h2>
+                <p>a</p>
             </div>
         </div>
     </section>
 
     <section id="nuestros-planes">
         <div class="container">
-            <h2>Nuestros Programas</h2>
+            <h2>Nuestros Planess</h2>
             <div class="planes">
                 <div class="carta">
                     <h3>Programador Front-end</h3>
@@ -67,8 +67,8 @@
     </section>
 
     <section id="final">
-        <h2>Listo para programar?</h2>
-        <button>APLICÁ YA!</button>
+        <h2>Listo para tener una nueva dirección a tus negocios?</h2>
+        <button>consultoriaplannegy@gmail.com</button>
     </section>
 
     <footer>
