--- a/index.html
+++ b/index.html
@@ -7,48 +7,51 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">ProgramaYa!</p>
+            <p class="logo">Consultoría Plannergy</p>
             <nav>
-                <a href="#somos-proya">Quienes Somos</a>
-                <a href="#nuestros-programas">Nuestros Programas</a>
+                <a href="#somos-plannergy">Quienes Somos</a>
+                <a href="#nuestros-planes">Nuestros Planes</a>
                 <a href="#caracteristicas">Características</a>
             </nav>
         </div>
     </header>
 
     <section id="hero">
-        <h1>Un servicio estrategico <br>a tu medida</h1>
-        <button>Solicitalo ya!</button>
+        <h1>Un servicio estratégico <br>a tu medida</h1>
+        <button>Contacto a: consultoriaplannegy@gmail.com</button>
     </section>
 
-    <section id="somos-proya">
+    <section id="somos-plannergy´s">
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
 
-                <h2>Somos <span class="color-acento">ProgramaYa!</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis odio nemo minus vel!</p>
+                <h2>Somos <span class="color-acento">Plannergy's!</span></h2>
+                <p>Servicios profesionales de estrategia y creatividad integral.
+                Solicita nuestro servicio con una garantía profesional.
+Los conocimientos necesarios para hacer crecer tus ideas o resolver tus problemas estratégicos del mañana.</p>
             </div>
         </div>
     </section>
 
-    <section id="nuestros-programas">
+    <section id="nuestros-planes">
         <div class="container">
-            <h2>Nuestros Programas</h2>
-            <div class="programas">
+            <h2>Nuestros Planes</h2>
+            <div class="planes">
                 <div class="carta">
-                    <h3>Programador Front-end</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <h3>Servicio base</h3>
+                    <p>El servicio cuenta con un primer contacto y feedback del solicitante, luego se realizan los insumos necesarios de la propuesta para una explicación final virtual con todos los datos, en todo momento se puede solicitar una reunión para ajustar el plan.</p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
-                    <h3>Programador Full-Stack</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <h3>Proceso del servicio</h3>
+                    <p>Presentación de propuesta y una o más sesiones finales de explicación</p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
-                    <h3>Programador Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <h3>Y mucho más</h3>
+                    <p>Adaptado a las necesidades de tu negocio. 
+Lo que necesites crear pasara con nosotros a ser una base estratégica.</p>
                     <button>+ Info</button>
                 </div>  
             </div>
@@ -61,14 +64,14 @@
                 <li>✔️ 100% online</li>
                 <li>✔️ Flexibilidad de atención</li>
                 <li>✔️ Soporte 1:1</li>
-                <li>✔️ Asistencia virtual</li>
+                <li>✔️ Asistencia virtual por videoconferencia</li>
             </ul>
         </div>
     </section>
 
     <section id="final">
-        <h2>Listo para programar?</h2>
-        <button>APLICÁ YA!</button>
+        <h2>¿Listo para dar un nuevo direccionamiento a tus negocios?</h2>
+        <button>Contacto a: consultoriaplannegy@gmail.com</button>
     </section>
 
     <footer>
