--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <p class="logo">Consultoría Plannergy</p>
             <nav>
-                <a href="#somos-plannergy">Quienes Somos</a>
+                <a href="#somos-plannergy's">Quienes Somos</a>
                 <a href="#nuestros-planes">Nuestros Planes</a>
                 <a href="#caracteristicas">Características</a>
             </nav>
@@ -28,8 +28,10 @@
 
                 <h2>Somos <span class="color-acento">Plannergy's!</span></h2>
                 <p>Servicios profesionales de estrategia y creatividad integral.
-                Solicita nuestro servicio con una garantía profesional.
-Los conocimientos necesarios para hacer crecer tus ideas o resolver tus problemas estratégicos del mañana.</p>
+                
+                    Solicita nuestro servicio con una garantía profesional.
+
+                    Los conocimientos necesarios para hacer crecer tus ideas o resolver tus problemas estratégicos del mañana.</p>
             </div>
         </div>
     </section>
