--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <p class="logo">Consultoría Plannergy</p>
             <nav>
-                <a href="#somos-plannergy's">Quienes Somos</a>
+                <a href="#somos-plannergys">Quienes Somos</a>
                 <a href="#nuestros-planes">Nuestros Planes</a>
                 <a href="#caracteristicas">Características</a>
             </nav>
@@ -21,7 +21,7 @@
         <button>Contacto a: consultoriaplannegy@gmail.com</button>
     </section>
 
-    <section id="somos-plannergy´s">
+    <section id="somos-plannergys">
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
